version/0.37/_sources/api/solver/_autosummary/settings/phase_5_child.rst.txt
:orphan:

.. _phase_5_child:

phase_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_5_child
    :show-inheritance:

.. rubric:: Attributes

==================================================================   ==========================================================

Attribute                                                                                                               Summary

==================================================================   ==========================================================
:ref:`pressure_jump_specification <pressure_jump_specification>`                          Pressure jump specification settings.

:ref:`swirl_velocity_specification <swirl_velocity_specification>`                       Swirl Velocity specification settings.

:ref:`discrete_phase <discrete_phase_2>`                                                               Discrete Phase settings.

:ref:`geometry <geometry_6>`                                             Allows to change geometry model variables or settings.

==================================================================   ==========================================================

.. rubric:: Included in:

========================   ======================================

Parent                                                    Summary

========================   ======================================
:ref:`phase_5 <phase_5>`       Domain name to define settings on.

========================   ======================================

